5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1613_1806.log
== TEST (2019-04-04 02:05:15) 
-- CODE:
from <math> import
n=int(input("digite o numero de pessoas:  "))
b=1-factorial(365)/factorial(365-n)*1/365**n
print(round(b,2))

-- ERROR:
File "XXXX", line 1
    from <math> import
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 02:06:11) 
-- CODE:
from <math> import*
n=int(input("digite o numero de pessoas:  "))
b=1-factorial(365)/factorial(365-n)*1/365**n
print(round(b,2))

-- ERROR:
File "XXXX", line 1
    from <math> import*
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 02:08:11) 
-- CODE:

n=int(input("digite o numero de pessoas:  "))
b=1-(365)/(365-n)*1/365**n
print(round(b,2))

-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 02:09:22) 
-- CODE:

n=int(input("digite o numero de pessoas:  "))
b=1-(365)/(365-n)*(1)/(365**n)
print(round(b,2))

-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 02:09:59) 
-- CODE:

n=float(input("digite o numero de pessoas:  "))
b=1-(365)/(365-n)*(1)/(365**n)
print(round(b,2))

-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 02:10:25) 
-- CODE:

n=float(input("digite o numero de pessoas:  "))
b=1-(365)/(365-n)*(1)/(365**n)
print(round(b,2))

-- EXECUTION TIME:
0.16082
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
1.0
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
1.0
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 04:13:36) 
-- CODE:
from math import*
n=float(input("digite o numero de pessoas:  "))
b=1-factorial(365)/factorial(365-n)*(1)/(365**n)
print(round(b,2))

-- EXECUTION TIME:
0.179473
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 04:13:45) 
-- CODE:
from math import*
n=float(input("digite o numero de pessoas:  "))
b=1-factorial(365)/factorial(365-n)*(1)/(365**n)
print(round(b,2))

-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 04:14:32) 
-- CODE:
from math import*
n=float(input("digite o numero de pessoas:  "))
b=1-(factorial(365)/factorial(365-n))*(1)/(365**n)
print(round(b,2))

-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 04:16:25) 
-- CODE:
from math import*
n=float(input("digite o numero de pessoas:  "))
b=1-(factorial(365)/factorial(365-n))*((1)/(365**n))
print(round(b,2))

-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 04:18:02) 
-- CODE:
from math import*
n=float(input("digite o numero de pessoas:  "))
b=1-(factorial(365)/factorial(365-n))*((1)/(365**n))
print(round(b,2))

-- EXECUTION TIME:
0.105073
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 04:21:13) 
-- CODE:
from math import*
n=float(input("digite o numero de pessoas:  "))
b=1-(factorial(365)/factorial(365-n))*((7)/(365**n))
print(round(b,2))

-- OUTPUT:
-4.83
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 04:21:57) 
-- CODE:
from math import*
n=float(input("digite o numero de pessoas:  "))
b=1-(factorial(365)/factorial(365-n))*((1)/(365**n))
print(round(b,2))

-- EXECUTION TIME:
0.137874
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 04:32:45) 
-- CODE:
from math import*
n=float(input("digite o numero de pessoas:  "))
b=1-(factrial(365)/factorial(365-n))*((1)/(365**n))
print(round(b,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b=1-(factrial(365)/factorial(365-n))*((1)/(365**n))
NameError: name 'factrial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 17:56:10) 
-- CODE:
from math import*
n=float(input("digite o numero de pessoas:  "))
b=1-(factorial(365)/factorial(365-n))*((1)/(365**n))
print(round(b,2))

-- EXECUTION TIME:
0.207926
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:56:11) 
-- CODE:
from math import*
n=float(input("digite o numero de pessoas:  "))
b=1-(factorial(365)/factorial(365-n))*((1)/(365**n))
print(round(b,2))

-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:03:01) 
-- CODE:
from math import*
n=float(input("digite o numero de pessoas:  "))
b=1-(factorial(365)/factorial(365-n))*((1)/(365**n))
b=b*100
print(round(b,2))

-- EXECUTION TIME:
0.119073
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:24:23) 
-- CODE:
from math import*
n=float(input("digite o numero de pessoas:  "))
b=1-(factorial(365)/factorial(365-n))*((1)/(365**n))
b=b*100
print(round(b,2))

-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:24:24) 
-- CODE:
from math import*
n=float(input("digite o numero de pessoas:  "))
b=1-(factorial(365)/factorial(365-n))*((1)/(365**n))
b=b*100
print(round(b,2))

-- EXECUTION TIME:
0.153113
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:26:26) 
-- CODE:
from math import*
n=float(input("digite o numero de pessoas:  "))
b=1-(factorial(365)/factorial(365-n))*((1)/(365**n))
b=b*100
print(round(b,2))

-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
